todo-app/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-frontend-service
spec:
  type: ClusterIP
  selector:
    app: todo-app-frontend-deployment
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
